client/src/App.css
/* Title and menu */

* {
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
}

.world-list-header{
  font-size: 1.5em;
  font-weight: bold;
  display: flex;

  margin-bottom: 5vh;
  
}
.description-list{
  width: 45vw;
}
.topbar {
  margin-top: 10vh;
}

.logo-parent {
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo {
  width: 40vw;
}

.menu {
  display: flex;
  margin-top: 4vh;
}

.auth-button{
  margin-left: 20px;
  margin-top: 20px;
  font-size: 18px;
}

.signup{
  margin-right: 20px;
}

.menu-button{
  display: flex;
  flex-direction: row;
  width:89.3px;
}

.logout{
  color: red;
  cursor: pointer;
}
.signup-link{
  text-align: center;
}

/* Explore world */

.world-list{
  margin-top: 10vh;
  margin-left: 10vw;
  margin-bottom: 10vw;
}
.world-header{
  color: #2070BF !important;
}

/* Add world */
.add-world{
  margin-top: 10vh;
  margin-left: 10vw;
  margin-right: 10vw;
}

/* World Homepage */

.world{
  margin-left: 10vw;
  padding: 2vw;
  margin-top: -5vh;
}
.world-title{
  font-size: 2.5vw;
  padding: 2vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.world-info{
  display: flex;
  justify-content: space-between
}

.world-top{
  display: flex;
}

.world-details{
  font-size: 1.5vw;
  padding: 2vw;
}
.world-events{
  font-size: 1.5vw;
  padding: 2vw;
  width: 30vw;
  height: 70vh;
  overflow-y: scroll;
}
.world-characters{
  font-size: 1.5vw;
  padding: 2vw;
  width: 30vw;
  height: 70vh;
  overflow-y: scroll;

}
.world-places{
  font-size: 1.5vw;
  padding: 2vw;
}
.world-elements-inside{
  display: flex;
  margin-top: 1vw;
  margin-right: 2vw;
  overflow-x: scroll;
}
.add-character{
  display: flex;
  flex-direction: column;
}
.add-character-form{
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.card-character{
  margin-right: 20px;
}

.image-card{
  width: 50%;
  height: 20%;
}

/* Back navigation button */
.back-navigation{
  margin-top: 4vh;
  font-size: 20px;
  color: black;
  cursor: pointer;
  padding: 10px;
}

.back-standard{
  display: flex;
  flex-direction: column;
  margin-left: 8vw;
  margin-top: 8vh;
}

.logo-small{
  width: 250px;
}
.page-name{
  font-size: 2vw;
  font-weight: bolder;
  text-align: center;
  margin-left: 9vw;
  margin-top: 4vh;
  margin-bottom: 1vh;
}

.loading-screen{
  width: 100vw;
  height: 100vh;
}

.world-graph{
  margin-left: 12vw;
  margin-top: 5vh;
  margin-bottom: 4vh;
}

.graph-list{
}

.row-title{
  display: inline-block;
  font-weight: bolder;
}
.linked-world-title{
  display: flex;
}
.linked-world-characters{
  display: flex;
  margin-top: 6vw;
  margin-bottom: 6vw;
}

.graph-item{
  display: inline-block;
  font-weight: bolder;
  margin-left: 2vw;
  font-weight: bolder;
}
.tab{
  margin-left: 4vw;
  width: 70vw;
  overflow-x: scroll;
}

.post-box{
  position: fixed;
  top: 19.5vh;
  margin-left: 70vw;
  width: 50vw;
}

.container-text{
  position: relative;
}

.sidebar{
  height: 65vh;
  overflow-y: scroll;
}

.sidebar-content{
  height: 55vh;
  overflow-y: scroll;
}
.sidebar-menu{
  display: flex;
}

.event-header{
  display: flex;
  justify-content: space-between
}

.header-char-post{
  display: flex;
  justify-content: space-between
}
.delete-button{
  width: 2.5em;
  height: 2.5em;
}

